--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,5 +30,5 @@ jobs:
                     if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
             -   name: Run
                 env:
-                    CONFIG: ${{ secrets.CONFIG }}
+                    CONFIG: ${{ secrets.config.example.json}}
                 run: python main.py
